fix botched comment

--- a/configs/randomattributes.cfg
+++ b/configs/randomattributes.cfg
@@ -394,7 +394,7 @@
 		"max"		"-2.00"
 	}
 	
-	"783" // charge time decreased
+	"783" // extinguish restores health
 	{
 		"type"		"int"
 		"min"		"1"
