Add settings config

--- a/configs/randomattributes/attributes.cfg
+++ b/configs/randomattributes/attributes.cfg
@@ -1,17 +1,18 @@
 // This config handles which attributes can be randomized, and the range of values they can have.
-// If you wish to add attributes to this list but aren't sure how to, here's a hopefully simple guide:
-// The main resource for this is at tf/scripts/items/items_game.txt
-// A more readable and understandable resource however, is the Official TF Wiki's list of item attributes: https://wiki.teamfortress.com/wiki/List_of_item_attributes
+// 
+// Resources for knowing what attributes/values can be set to:
+// tf/scripts/items/items_game.txt
+// Official TF Wiki's list of item attributes (easier to read): https://wiki.teamfortress.com/wiki/List_of_item_attributes
 //
 // Main key is the attribute index. You can have multiple if you want to use the same parameters for them all, just separate them with a space.
 // The parameters you can set are "type", "min", "max".
 // - type: can be either "int" or "float"
-// 		- int: randomization will only consider integers (whole numbers)
-// 		- float: randomization will consider everything inbetween
+// 	- int: randomization will only consider integers (whole numbers)
+// 	- float: randomization will consider everything inbetween
 // - min: minimum value to consider for randomization
 // - max: maximum value to consider for randomization
 //
-// The config can be refreshed mid-game with sm_ra_refresh
+// The config can be refreshed mid-game with sm_ra_refreshattributes
 
 "Attributes"
 {
@@ -40,7 +41,7 @@
 	}
 	
 	// Generic multiplier attributes that go both ways
-	"75 120 159 175 246 260 263 264 286 287 304 319 329 344 345 377 405 410 470 610 789"
+	"75 120 159 175 246 260 263 264 286 287 304 319 329 344 345 377 405 409 470 610 789"
 	{
 		"type"		"float"
 		"min"		"0.01"
@@ -69,6 +70,7 @@
 		"type"		"float"
 		"min"		"0.40"
 		"max"		"0.99"
+		"multi"		"1"
 	}
 	
 	// Movement speed bonuses
@@ -77,6 +79,7 @@
 		"type"		"float"
 		"min"		"1.01"
 		"max"		"1.30"
+		"multi"		"1"
 	}
 	
 	"11" // overheal bonus
@@ -394,7 +397,7 @@
 		"max"		"-2.00"
 	}
 	
-	"783" // extinguish restores health
+	"783" // charge time decreased
 	{
 		"type"		"int"
 		"min"		"1"
