fix duplicate 205 instead of 206

--- a/configs/randomattributes/attributes.cfg
+++ b/configs/randomattributes/attributes.cfg
@@ -283,7 +283,7 @@
 		"max"		"3.00"
 	}
 	
-	"205" // dmg from ranged reduced (no positive)
+	"206" // dmg from melee increased (no positive)
 	{
 		"type"		"float"
 		"min"		"0.40"
