update Red Sun gamemodes

--- a/configs/randomattributes/settings.cfg
+++ b/configs/randomattributes/settings.cfg
@@ -83,9 +83,17 @@
 		{
 		}
 		
+		"Event Map"
+		{
+		}
+		
 		"Fortress Royale"
 		{
 			"reroll_on_slot_change"		"1"
+		}
+		
+		"FortWars"
+		{
 		}
 		
 		"Freeze Tag"
@@ -113,6 +121,10 @@
 		{
 		}
 		
+		"Mann vs. Mann"		// incompatible-ish (pensive emoji)
+		{
+		}
+		
 		"MicroTF2"
 		{
 			"reroll_on_slot_change"		"1"
@@ -127,16 +139,23 @@
 			"reroll_on_death"			"2"
 		}
 		
-		"Prop Hunt"
+		"PropHunt"
 		{
-			"apply_on_weapon_creation"	"1"
 		}
 		
 		"Randomizer"
 		{
 		}
 		
+		"SCP Secret Fortress"
+		{
+		}
+		
 		"Smash Fortress"
+		{
+		}
+		
+		"Stock"
 		{
 		}
 		
@@ -157,9 +176,17 @@
 		{
 		}
 		
-		"TF:GO Arena"
+		"Teufort Turbo"
+		{
+		}
+		
+		"TF:GO"
 		{
 			"reroll_on_slot_change"		"1"
+		}
+		
+		"Turbo Fortress"
+		{
 		}
 		
 		"Versus Saxton Hale"
