--- a/configs/randomattributes/settings.cfg
+++ b/configs/randomattributes/settings.cfg
@@ -24,6 +24,7 @@
 	{
 		"amount"					"-1"
 		"active_only"				"-1"
+		"only_allow_team"			""
 		"reroll_on_death"			"1"
 		"reroll_on_slot_change"		"0"
 	}
