add blacklist setting

--- a/configs/randomattributes/settings.cfg
+++ b/configs/randomattributes/settings.cfg
@@ -3,6 +3,7 @@
 // The following settings you can modify with this config are:
 //	- amount: amount of attributes to be given per weapon (convar sm_ra_amount)
 //	- active_only: value 1 forces the 'provide on active' attribute to be given to weapons, making passive attributes these weapons have to be locked as active ones instead (convar sm_ra_activeonly)
+//	- blacklist: removes attributes from the random pool for the current map or gamemode, defined by attribute indexes, separated by spaces
 //	- only_allow_team: sets which team is able to receive random attributes, accepts "red" and "blu", any other value is disregarded (convar sm_ra_onlyallowteam)
 //	- reroll_on_death (convar sm_ra_rerolldeath): 
 //		- 0: doesn't reroll attributes when a player dies (only when a round starts)
@@ -42,6 +43,16 @@
 			"reroll_on_slot_change"		"1"
 		}
 		
+		"db_"
+		{
+			"blacklist" 				"356 822 826 833"
+		}
+		
+		"tfdb_"
+		{
+			"blacklist" 				"356 822 826 833"
+		}
+		
 		"vsh_dr_"
 		{
 			// just need to put this here so it doesnt use vsh_ map settings
@@ -55,6 +66,11 @@
 		"szf_"
 		{
 			"reroll_on_slot_change"		"1"
+		}
+		
+		"vsh_"
+		{
+			"blacklist" 				"226"
 		}
 		
 		"warioware_"
@@ -83,6 +99,7 @@
 		
 		"Dodgeball"
 		{
+			"blacklist" 				"356 822 826 833"
 		}
 		
 		"Event Map"
@@ -193,6 +210,7 @@
 		
 		"Versus Saxton Hale"
 		{
+			"blacklist" 				"226"
 		}
 	}
 }
