update Red Sun gamemodes (and mvm maps)

--- a/configs/randomattributes/settings.cfg
+++ b/configs/randomattributes/settings.cfg
@@ -63,6 +63,13 @@
 			"reroll_on_slot_change"		"1"
 		}
 		
+		"mvm_"
+		{
+			"amount"					"5"
+			"only_allow_team"			"blu"
+			"reroll_on_slot_change"		"1"
+		}
+		
 		"szf_"
 		{
 			"reroll_on_slot_change"		"1"
@@ -81,29 +88,9 @@
 	
 	"RedSunGamemode"
 	{
-		"BomberMod"
-		{
-		}
-		
-		"Class Warfare"
-		{
-		}
-		
-		"Combat Surf"
-		{
-		}
-		
-		"Deathrun"
-		{
-		}
-		
 		"Dodgeball"
 		{
 			"blacklist" 				"356 822 826 833"
-		}
-		
-		"Event Map"
-		{
 		}
 		
 		"Fortress Royale"
@@ -111,37 +98,17 @@
 			"reroll_on_slot_change"		"1"
 		}
 		
-		"FortWars"
-		{
-		}
-		
-		"Freeze Tag"
-		{
-		}
-		
-		"Glass Attack"
-		{
-		}
-		
 		"GunGame"
 		{
 			"reroll_on_slot_change"		"1"
 		}
 		
-		"Hero Fortress"
-		{
-		}
 		
-		"Huntsman Hell"
+		"Mann in the Machine"
 		{
-		}
-		
-		"Instagib"
-		{
-		}
-		
-		"Mann vs. Mann"		// incompatible-ish (pensive emoji)
-		{
+			"amount"					"5"
+			"only_allow_team"			"blu"
+			"reroll_on_slot_change"		"1"
 		}
 		
 		"MicroTF2"
@@ -149,37 +116,9 @@
 			"reroll_on_slot_change"		"1"
 		}
 		
-		"Mystery Map"
-		{
-		}
-		
 		"Player Versus Map"
 		{
 			"reroll_on_death"			"2"
-		}
-		
-		"PropHunt"
-		{
-		}
-		
-		"Randomizer"
-		{
-		}
-		
-		"SCP: Secret Fortress"
-		{
-		}
-		
-		"Smash Fortress"
-		{
-		}
-		
-		"Stock"
-		{
-		}
-		
-		"Stop That Tank!"
-		{
 		}
 		
 		"Super Zombie Fortress"
@@ -187,25 +126,9 @@
 			"reroll_on_slot_change"		"1"
 		}
 		
-		"Tank Race"
-		{
-		}
-		
-		"Team Battles"
-		{
-		}
-		
-		"Teufort Turbo"
-		{
-		}
-		
 		"TF:GO"
 		{
 			"reroll_on_slot_change"		"1"
-		}
-		
-		"Turbo Fortress"
-		{
 		}
 		
 		"Versus Saxton Hale"
