blacklist no jump/duck attributes in Deathrun

--- a/configs/randomattributes/settings.cfg
+++ b/configs/randomattributes/settings.cfg
@@ -53,9 +53,14 @@
 			"blacklist" 				"356 822 826 833"
 		}
 		
+		"dr_"
+		{
+			"blacklist" 				"819 820"
+		}
+		
 		"vsh_dr_"
 		{
-			// just need to put this here so it doesnt use vsh_ map settings
+			"blacklist" 				"819 820"
 		}
 		
 		"gg_"
@@ -88,6 +93,11 @@
 	
 	"RedSunGamemode"
 	{
+		"Deathrun"
+		{
+			"blacklist" 				"819 820"
+		}
+		
 		"Dodgeball"
 		{
 			"blacklist" 				"356 822 826 833"
